# LifePlusPlus

./: .gitignore  CMakeLists.txt  README.markdown  debug-build.sh  make.sh  release-build.sh  static-analysis.sh
Life++/: Life__.1  main.cpp
Life++.xcodeproj/: project.pbxproj
Life++.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Life++.xcodeproj/project.xcworkspace/xcuserdata/fmorgner.xcuserdatad/: UserInterfaceState.xcuserstate
Life++.xcodeproj/xcuserdata/fmorgner.xcuserdatad/xcdebugger/: Breakpoints.xcbkptlist
Life++.xcodeproj/xcuserdata/fmorgner.xcuserdatad/xcschemes/: Life++.xcscheme  xcschememanagement.plist
include/: CApplication.h  CCell.h  CFiniteRing.h  CRing.h  CView.h  CWidget.h  CWindow.h  CWorld.h  Cell.h  FiniteRing.h  Renderer.h  Ring.h  World.h
src/: CApplication.cpp  CCell.cpp  CMakeLists.txt  CRing.cpp  CView.cpp  CWidget.cpp  CWindow.cpp  CWorld.cpp  Cell.cpp  World.cpp  main.cpp
